--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,12 @@
             <artifactId>smack-java8</artifactId>
             <version>${dependency.smack.version}</version>
         </dependency>	
+
+        <dependency>
+            <groupId>nl.martijndwars</groupId>
+            <artifactId>web-push</artifactId>
+            <version>5.1.1</version>
+        </dependency>
 		
         <dependency>
             <groupId>net.sf.json-lib</groupId>
@@ -148,6 +154,7 @@
 			  </exclusion>
 			</exclusions> 			
         </dependency> 
+
         <dependency>
             <groupId>com.github.waffle</groupId>
             <artifactId>waffle-jna</artifactId>
