--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
         </dependency> 	
 
         <dependency>
+            <groupId>com.j256.two-factor-auth</groupId>
+            <artifactId>two-factor-auth</artifactId>
+            <version>1.3</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.lowagie</groupId>
             <artifactId>itext</artifactId>
             <!-- NB. Later versions are available at com.itextpdf:itextpdf but require code changes -->
