--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>plugins</artifactId>
         <groupId>org.igniterealtime.openfire</groupId>
-        <version>4.7.5</version>
+        <version>4.8.0-SNAPSHOT</version>
     </parent>
     
     <groupId>org.igniterealtime.openfire</groupId>
@@ -17,10 +17,10 @@
     <description>SparkWeb Plugin for Openfire</description>
 	
     <properties>
-		<build.date>31/12/2023</build.date>	
+		<build.date>2023/12/31</build.date>	
         <jackson.version>2.15.2</jackson.version>
         <jersey.version>2.36</jersey.version>	
-        <bouncycastle.version>1.68</bouncycastle.version>	
+        <bouncycastle.version>1.70</bouncycastle.version>	
 		<dependency.smack.version>4.4.6</dependency.smack.version>
     </properties>
 	
@@ -241,8 +241,29 @@
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jdk8</artifactId>
 			<version>${jackson.version}</version>
-		</dependency>	
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-yaml</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-cbor</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
 		
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+	
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
