--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>plugins</artifactId>
         <groupId>org.igniterealtime.openfire</groupId>
-        <version>4.8.0-SNAPSHOT</version>
+        <version>4.8.0-beta</version>
     </parent>
     
     <groupId>org.igniterealtime.openfire</groupId>
