--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <artifactId>plugins</artifactId>
         <groupId>org.igniterealtime.openfire</groupId>
-        <version>4.8.0-beta</version>
+        <version>4.8.0</version>
     </parent>
     
     <groupId>org.igniterealtime.openfire</groupId>
     <artifactId>sparkweb</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>SparkWeb</name>
     <description>SparkWeb Plugin for Openfire</description>
 	
